--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body class="page">
     <header class="header">
-      <a class="header__logo">&lt;/HTML&gt;</a>
+      <a aria-hidden="true" class="header__logo">&lt;/HTML&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
